--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -9,9 +9,8 @@ pipeline {
     stages {
         
         stage('Checkout'){
-           steps {
-                git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
-                url: 'https://github.com/iam-veeramalla/cicd-end-to-end',
+            steps {
+                url: 'https://github.com/vishalkiran/Jenkins-Zero-To-Hero',
                 branch: 'main'
            }
         }
@@ -21,7 +20,7 @@ pipeline {
                 script{
                     sh '''
                     echo 'Buid Docker Image'
-                    docker build -t abhishekf5/cicd-e2e:${BUILD_NUMBER} .
+                    docker build -t vkhonge/cicd-e2e:${BUILD_NUMBER} .
                     '''
                 }
             }
@@ -32,16 +31,15 @@ pipeline {
                 script{
                     sh '''
                     echo 'Push to Repo'
-                    docker push abhishekf5/cicd-e2e:${BUILD_NUMBER}
+                    docker push vkhonge/cicd-e2e:${BUILD_NUMBER}
                     '''
                 }
             }
         }
         
         stage('Checkout K8S manifest SCM'){
-            steps {
-                git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
-                url: 'https://github.com/iam-veeramalla/cicd-demo-manifests-repo.git',
+            steps { 
+                url: 'https://github.com/vishalkiran/Jenkins-Zero-To-Hero.git',
                 branch: 'main'
             }
         }
@@ -57,7 +55,7 @@ pipeline {
                         git add deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
                         git remote -v
-                        git push https://github.com/iam-veeramalla/cicd-demo-manifests-repo.git HEAD:main
+                        git push https://github.com/vishalkiran/Jenkins-Zero-To-Hero.git HEAD:main
                         '''                        
                     }
                 }
