--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -10,8 +10,7 @@ pipeline {
         
         stage('Checkout'){
             steps {
-                url: 'https://github.com/vishalkiran/Jenkins-Zero-To-Hero.git',
-                branch: 'main'
+                git branch: 'main', url: 'https://github.com/vishalkiran/Jenkins-Zero-To-Hero'
            }
         }
 
