--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -38,8 +38,7 @@ pipeline {
         
         stage('Checkout K8S manifest SCM'){
             steps { 
-                url: 'https://github.com/vishalkiran/Jenkins-Zero-To-Hero.git',
-                branch: 'main'
+                git branch: 'main', url: 'https://github.com/vishalkiran/Jenkins-Zero-To-Hero'
             }
         }
         
