--- a/python-jenkins-argocd-k8s/Jenkinsfile
+++ b/python-jenkins-argocd-k8s/Jenkinsfile
@@ -9,8 +9,10 @@ pipeline {
     stages {
         
         stage('Checkout'){
-            steps {
-                git branch: 'main', url: 'https://github.com/vishalkiran/Jenkins-Zero-To-Hero/python-jenkins-argocd-k8s'
+           steps {
+                git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
+                url: 'https://github.com/iam-veeramalla/cicd-end-to-end',
+                branch: 'main'
            }
         }
 
@@ -19,7 +21,7 @@ pipeline {
                 script{
                     sh '''
                     echo 'Buid Docker Image'
-                    docker build -t vkhonge/cicd-e2e:${BUILD_NUMBER} .
+                    docker build -t abhishekf5/cicd-e2e:${BUILD_NUMBER} .
                     '''
                 }
             }
@@ -30,15 +32,17 @@ pipeline {
                 script{
                     sh '''
                     echo 'Push to Repo'
-                    docker push vkhonge/cicd-e2e:${BUILD_NUMBER}
+                    docker push abhishekf5/cicd-e2e:${BUILD_NUMBER}
                     '''
                 }
             }
         }
         
         stage('Checkout K8S manifest SCM'){
-            steps { 
-                git branch: 'main', url: 'https://github.com/vishalkiran/Jenkins-Zero-To-Hero'
+            steps {
+                git credentialsId: 'f87a34a8-0e09-45e7-b9cf-6dc68feac670', 
+                url: 'https://github.com/iam-veeramalla/cicd-demo-manifests-repo.git',
+                branch: 'main'
             }
         }
         
@@ -53,7 +57,7 @@ pipeline {
                         git add deploy.yaml
                         git commit -m 'Updated the deploy yaml | Jenkins Pipeline'
                         git remote -v
-                        git push https://github.com/vishalkiran/Jenkins-Zero-To-Hero.git HEAD:main
+                        git push https://github.com/iam-veeramalla/cicd-demo-manifests-repo.git HEAD:main
                         '''                        
                     }
                 }
